--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/devops-casestudy-20200608/flaskapp-image:$COMMIT_SHA', '.']
+  args: ['build', '-t', 'gcr.io/[PROJECT_ID]/[IMAGE_NAME]', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/devops-casestudy-20200608/flaskapp-image:$COMMIT_SHA']
-images: ['gcr.io/devops-casestudy-20200608/flaskapp-image:$COMMIT_SHA']
+  args: ['push', 'gcr.io/[PROJECT_ID]/[IMAGE_NAME]']
+images: ['gcr.io/[PROJECT_ID]/[IMAGE_NAME]']
