--- a/falsk-app-lb.yaml
+++ b/falsk-app-lb.yaml
@@ -1,9 +1,12 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: flaskapp-ingress
+  name: flask-app-service
 spec:
-  backend:
-    serviceName: flask-app-service
-    servicePort: 80
-
+  rules:
+  - http:
+      paths:
+      - path: /*
+        backend:
+          serviceName: flask-app-service
+          servicePort: 80
