--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,24 @@
+# steps:
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['build', '-t', 'gcr.io/devops-casestudy-20200608/bib-flaskapp', '.']
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['push', 'gcr.io/devops-casestudy-20200608/bib-flaskapp']
+# images: ['gcr.io/devops-casestudy-20200608/bib-flaskapp']
+# ['build', '-t', 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA'
+
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/devops-casestudy-20200608/bib-flaskapp', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/devops-casestudy-20200608/bib-flaskapp']
-images: ['gcr.io/devops-casestudy-20200608/bib-flaskapp']
+  # build the container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["build", "-t", "gcr.io/devops-casestudy-20200608/mysql-flaskapp:$COMMIT_SHA", "."]
+  # push container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "gcr.io/devops-casestudy-20200608/image:$COMMIT_SHA"]
+  # deploy container image to GKE
+- name: "gcr.io/cloud-builders/gke-deploy"
+  args:
+  - run
+  - --filename=./kubernetes/deployment.yaml
+  - --image=gcr.io/devops-casestudy-20200608/mysql-flaskapp:$COMMIT_SHA
+  - --location=us-central1-c
+  - --cluster=flask-app-prod
+  - --namespaces=production
