--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -4,9 +4,9 @@ metadata:
   labels:
     app: flask-app
   name: flask-app
-  namespace: default
+  namespace: production
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: flask-app
@@ -24,26 +24,6 @@ spec:
         - image: gcr.io/devops-casestudy-20200608/github.com/bibek-devops/flask-app-cicd
           imagePullPolicy: Always
           name: falsk-app-image-1
----
-apiVersion: autoscaling/v2beta1
-kind: HorizontalPodAutoscaler
-metadata:
-  labels:
-    app: flask-app
-  name: flask-app-hpa-quir
-  namespace: default
-spec:
-  maxReplicas: 5
-  metrics:
-    - resource:
-        name: cpu
-        targetAverageUtilization: 80
-      type: Resource
-  minReplicas: 1
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: flask-app
 
 ---
 apiVersion: v1
