--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -2,36 +2,58 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: flask-mysql
+  labels:
+    app: flask-app
 spec:
   ports:
-  - port: 3306
+    - port: 3306
   selector:
-    app: mysql
+    app: flask-app
+    tier: mysql
   clusterIP: None
 ---
-apiVersion: apps/v1 
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: flask-app
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
+---
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: mysql
+  name: flask-app-mysql
+  labels:
+    app: flask-app
 spec:
   selector:
     matchLabels:
-      app: mysql
+      app: flask-app
+      tier: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysql
+        app: flask-app
+        tier: mysql
     spec:
       containers:
-      - image: mysql:8.0.20
+      - image: mysql:5.6
         name: mysql
         env:
-          # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
-          value: password
+          valueFrom:
+            secretKeyRef:
+              name: mysql-pass
+              key: password
         ports:
         - containerPort: 3306
           name: mysql
@@ -42,9 +64,3 @@ spec:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
           claimName: mysql-pv-claim
-
-
-
-        env:
-            - name: HOST_IP
-              value: <INGRESS_SUBDOMAIN>
