--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@ steps:
 - name: "gcr.io/cloud-builders/gke-deploy"
   args:
   - run
-  - --filename=./kubernetes/deployment.yaml
+  - --filename=./kubernetes/kustomization.yaml
   - --image=gcr.io/devops-casestudy-20200608/mysql-flaskapp/dev:$COMMIT_SHA
   - --location=asia-south1	
   - --cluster= app-devlopment-gke
