--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
   args:
   - run
   - --filename=./kubernetes/deployment.yaml
-  - --image=${_IMAGE_NAME}
+  - --image=gcr.io/devops-casestudy-20200608/mysql-flaskapp/prod:$COMMIT_SHA
   - --location=${_CLOUDSDK_COMPUTE_ZONE}
   - --cluster= ${_CLOUDSDK_CONTAINER_CLUSTER}
   - --namespace=${_NAMESPACE}
