--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -23,27 +23,7 @@ spec:
       containers:
         - image: gcr.io/devops-casestudy-20200608/mysql-flaskapp/prod
           imagePullPolicy: Always
-          name: falsk-app-image-1
----
-apiVersion: autoscaling/v2beta1
-kind: HorizontalPodAutoscaler
-metadata:
-  labels:
-    app: flask-app
-  name: flask-app-hpa-quir
-  namespace: default
-spec:
-  maxReplicas: 5
-  metrics:
-    - resource:
-        name: cpu
-        targetAverageUtilization: 80
-      type: Resource
-  minReplicas: 1
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: flask-app
+          name: falsk-app-image
 
 ---
 apiVersion: v1
